src/ejercicios_resueltos/k8s_manifests/dos_containers_corregido.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dos-containers
spec:
  containers:
    - name: proxy
      image: nginx
    - name: busybox
      image: busybox
      command: ["/bin/sleep", "infinity"]
