src/ejercicios_resueltos/k8s_manifests/mysql-persist.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-persist-pod
spec:
  containers:
    - name: mysql
      image: mysql:latest
      ports:
        - containerPort: 3306
  volumes:
    - name: mysql-data
      persistentVolumeClaim:
        claimName: mysql-data-pvc
