src/ejercicios_resueltos/k8s_manifests/mysql-persists-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-persist-bad-pod
spec:
  containers:
    - name: mysql
      image: mysql:latest
      ports:
        - containerPort: 3306
      volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumes:
    - name: mysql-data
      persistentVolumeClaim:
        claimName: mysql-data-nuevo
