src/ejercicios_resueltos/k8s_manifests/outofmemory.yaml
apiVersion: v1
kind: Pod
metadata:
  name: outofmemory
spec:
  containers:
    - name: sinmemoria
      image: busybox
      command: ["sh", "-c", "dd if=/dev/zero of=/dev/null bs=100M count=10"]
      resources:
        limits:
          memory: "50Mi"
