src/ejercicios_resueltos/k8s_manifests/postgres-pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
spec:
  containers:
    - name: postgres
      image: postgres:latest
