src/ejercicios_resueltos/k8s_manifests/simple_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: proxy-manifest
spec:
  containers:
    - name: proxy
      image: nginx
