src/ejercicios_resueltos/k8s_manifests/sleeper-deployment10.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleeper-deployment
spec:
  replicas: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: sleeper2-APP
  template:
    metadata:
      labels:
        app: sleeper2-APP
    spec:
      containers:
        - name: busybox
          image: busybox:1.32
          command:
            [
              "sh",
              "-c",
              "while true; do echo '$(hostname) - $(date)'; sleep $(SLEEP_DURATION); done",
            ]
