src/ejercicios_resueltos/k8s_manifests/volumes-configmaps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-volume
spec:
  containers:
    - name: test
      image: busybox
      command:
        [
          "sh",
          "-c",
          'echo "Contenido de del volumen:" && ls -al /etc/config && tail -f /dev/null',
        ]
      volumeMounts:
        - name: config-vol
          mountPath: /etc/config/log_level
  volumes:
    - name: config-vol
      configMap:
        name: log-config
        items:
          - key: log_level.conf
            path: log_level.conf
