src/ejercicios_resueltos/k8s_manifests/wordpress-dos-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wp-pod
  labels:
    app: blog
spec:
  containers:
    - name: wp
      image: wordpress:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  labels:
    app: blog
spec:
  containers:
    - name: wpdb
      image: mysql:latest
      ports:
        - containerPort: 3306
