src/ejercicios_resueltos/k8s_manifests/wordpress-standalone.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wordpress-standalone
spec:
  containers:
    - name: wp
      image: wordpress:latest
    - name: wpdb
      image: mysql:latest
