src/ejercicios_resueltos/k8s_manifests/fakewebserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-webserver-svc
spec:
  selector:
    app: fake-ws
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
