src/ejercicios_resueltos/k8s_manifests/wordpress-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: blog
spec:
  ports:
    - port: 3306
  selector:
    app: blog
