src/ejercicios_resueltos/k8s_manifests/fakewebserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-webserver-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: fake.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake-webserver-svc
                port:
                  number: 80
